--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="box-wapper">
                     <div class="box1"> 
-                        <img src="images/image1.png" alt="" srcset="">
+                        <img src="images/img1.jpg" alt="" srcset="">
                         <h3>Ârîjít</h3>
                     </div>
                     <div class="box1">
