--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
                 </div>
                 <div class="box-wapper1">
                     <div class="header-text">
-                        <p id="text1"></p>
+                        <!-- <p id="text1"></p>
                         <p id="text2"></p>
                         <p id="text3"></p>
                         <p id="text4"></p>
                         <p id="text5"></p>
                         <p id="text6"></p>
-                        <p id="text7"></p>
+                        <p id="text7"></p> -->
+                        <ul id="list-items">
+                            
+                        </ul>
                     </div>
                 </div>
             </div>
