--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p>Click your picture or add an account.</p>
                 </div>
                 <div class="box-wapper">
-                    <div class="box1"> 
+                    <div class="box1">
                         <img src="images/img1.jpg" alt="" srcset="">
                         <h3>Ârîjít</h3>
                     </div>
@@ -29,20 +29,20 @@
                         <h3>Ârîjít</h3> -->
                     </div>
                 </div>
-                <div class="box-wapper1">
+                <!-- <div class="box-wapper1">
                     <div class="header-text">
-                        <!-- <p id="text1"></p>
+                        <p id="text1"></p>
                         <p id="text2"></p>
                         <p id="text3"></p>
                         <p id="text4"></p>
                         <p id="text5"></p>
                         <p id="text6"></p>
-                        <p id="text7"></p> -->
+                        <p id="text7"></p>
                         <ul id="list-items">
-                            
+
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-5 my-8">
                 <div class="login-form">
@@ -53,7 +53,8 @@
                                 class="type-off" id="emailshow">
                         </div>
                         <div class="input-from">
-                            <input type="password" placeholder="Password" value="" name="pass" class="type-off" id="showpassword">
+                            <input type="password" placeholder="Password" value="" name="pass" class="type-off"
+                                id="showpassword">
                             <button type="button" class="btn1" onclick="showPass()">
                                 <div class="button-img">
                                     <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yZ/r/je5FEJkU1_K.png" alt=""
@@ -68,7 +69,8 @@
                             <button type="button" class="forget-button"><a href="#">Forgotten password?</a></button>
                         </div>
                         <div class="input-button">
-                            <button type="button" class="creat-button" onclick="changeFrom()"><a href="#">Create new account</a></button>
+                            <button type="button" class="creat-button" onclick="changeFrom()"><a href="#">Create new
+                                    account</a></button>
                         </div>
                     </form>
 
@@ -79,22 +81,27 @@
                                 class="type-off" id="firstname">
                         </div>
                         <div class="input-from">
-                            <input type="text" placeholder="Enter your Last name" value="" name="pass" class="type-off" id="lastname" >
+                            <input type="text" placeholder="Enter your Last name" value="" name="pass" class="type-off"
+                                id="lastname">
                         </div>
                         <div class="input-from">
-                            <input type="number" placeholder="Enter your Age" value="" name="pass" class="type-off" id="number">
+                            <input type="number" placeholder="Enter your Age" value="" name="pass" class="type-off"
+                                id="number">
                         </div>
                         <div class="input-from">
-                            <input type="date" placeholder="Enter your date of birth" value="" name="pass" class="type-off" id="date" >
+                            <input type="date" placeholder="Enter your date of birth" value="" name="pass"
+                                class="type-off" id="date">
                         </div>
                         <div class="input-from">
-                            <input type="text" placeholder="Enter your address" value="" name="pass" class="type-off" id="address">
+                            <input type="text" placeholder="Enter your address" value="" name="pass" class="type-off"
+                                id="address">
                         </div>
                         <div class="input-button">
                             <button type="button" class="login-button" onclick="showData()">Sing up</button>
-                        </div>  
+                        </div>
                         <div class="input-button">
-                            <button type="button" class="creat-button" onclick="changeFrom1()"><a href="#">Log in here</a></button>
+                            <button type="button" class="creat-button" onclick="changeFrom1()"><a href="#">Log in
+                                    here</a></button>
                         </div>
                     </form>
                     <div class="footer-para">
@@ -105,7 +112,7 @@
         </div>
     </div>
 
-<p id="object"></p>
+    <p id="object"></p>
 
     <script src="js/custom.js"></script>
 </body>
