--- a/index.html
+++ b/index.html
@@ -29,20 +29,9 @@
                         <h3>Ârîjít</h3> -->
                     </div>
                 </div>
-                <!-- <div class="box-wapper1">
-                    <div class="header-text">
-                        <p id="text1"></p>
-                        <p id="text2"></p>
-                        <p id="text3"></p>
-                        <p id="text4"></p>
-                        <p id="text5"></p>
-                        <p id="text6"></p>
-                        <p id="text7"></p>
-                        <ul id="list-items">
-
-                        </ul>
-                    </div>
-                </div> -->
+                <div class="box-wapper1">
+                    <ul id="list-ul"></ul>
+                </div>
             </div>
             <div class="col-5 my-8">
                 <div class="login-form">
